--- a/src/assets/stylesheets/study-groups/study-groups.module.css
+++ b/src/assets/stylesheets/study-groups/study-groups.module.css
@@ -14,9 +14,9 @@
 .createGroupBtn {
     height: 40px;
     width: 40px;
-    position: absolute;
+    position: fixed;
     bottom: 20px;
-    right: 20px;
+    right: 30px;
     padding: 0;
     border-radius: 50%;
     border: none;
