--- a/src/assets/stylesheets/group-forum/group-forum.module.css
+++ b/src/assets/stylesheets/group-forum/group-forum.module.css
@@ -227,6 +227,7 @@
     border-top: 2px solid var(--gray);
     padding: 20px 0 10px 0;
     margin:  10px 0 0 0;
+    position: relative;
 }
 .commentHeader {
 
