--- a/src/assets/stylesheets/App.css
+++ b/src/assets/stylesheets/App.css
@@ -5,7 +5,7 @@
         scroll-behavior: smooth;
     }
 }
-body {
+body * {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 * {
