--- a/src/assets/stylesheets/study-groups/study-groups.module.css
+++ b/src/assets/stylesheets/study-groups/study-groups.module.css
@@ -122,3 +122,9 @@ dialog::backdrop {
 .suggestedTopicWord:hover {
     background: var(--gray);
 }
+.sort {
+    font-size: 16px;
+    border-radius: 5px;
+    border: 2px solid var(--gray);
+    padding: 2px 0;
+}
