--- a/src/assets/stylesheets/study-groups/group-card.module.css
+++ b/src/assets/stylesheets/study-groups/group-card.module.css
@@ -10,7 +10,7 @@
     max-width: 45%;
     display: inline-block;
 }
-.groupCard {
+.groupCard, .groupCardSkeleton {
     height: 155px;
     width: 30%;
     padding: 10px;
@@ -19,6 +19,10 @@
     border-radius: 10px;
     background: var(--primary-color);
     composes: boxShadow;
+}
+.groupCardSkeleton {
+    border: none;
+    box-shadow: none;
 }
 .groupCard > *:not(p) {
     margin-bottom: 5px;
