--- a/src/assets/stylesheets/group-forum/group-forum.module.css
+++ b/src/assets/stylesheets/group-forum/group-forum.module.css
@@ -168,6 +168,9 @@
 .postUserInfo > p, .timePosted {
     font-size: 15px;
 }
+.replyContent, .commentContent, .question {
+    white-space: pre-wrap;
+}
 .question {
     padding-bottom: 10px;
 }
