--- a/src/assets/stylesheets/layouts/main-section.module.css
+++ b/src/assets/stylesheets/layouts/main-section.module.css
@@ -7,6 +7,7 @@
     overflow: auto;
     padding: 10px;
     position: relative;
+    background: #fcfcfc;
 }
 .mainSection::-webkit-scrollbar {
     background: none;
